--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <h1 class="font-sancreek text-[8vw] lg:text-[2.5vw] text-[#fd91be] mt-[10vw] lg:mt-[3vw] text-center">First Birthday Party</h1>
           <div class="flex w-full justify-between px-[5vh] lg:px-[12vh] mt-[2vh]">
             <img src="./src/assets/bki.png" class="w-[20vw] lg:w-[5vw] h-auto animate-pulse" alt="">
-            <img src="./src/assets/mainan.png" class="w-[40vw] lg:w-[10vw]" alt="">
+            <img src="./src/assets/caar.gif" class="w-[40vw] lg:w-[10vw]" alt="">
             <img src="./src/assets/bka.png" class="w-[20vw] lg:w-[5vw] animate-pulse" alt="">
           </div>
           <p class="font-sancreek text-[#ff66c4] text-[5vw] lg:text-[1.4vw] text-center lg:mt-[1vw] mt-[7vw]">Saturday, December 21 2024</p>
