--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <h1 class="font-sancreek text-[8vw] lg:text-[2.5vw] text-[#fd91be] mt-[10vw] lg:mt-[3vw] text-center">First Birthday Party</h1>
           <div class="flex w-full justify-between px-[5vh] lg:px-[12vh] mt-[2vh]">
             <img src="./src/assets/bki.png" class="w-[20vw] lg:w-[5vw] h-auto animate-pulse" alt="">
-            <img src="./src/assets/mainan.png" class="w-[40vw] lg:w-[10vw]" alt="">
+            <img src="./src/assets/carousell.gif" class="w-[44vw] lg:w-[15vw]" alt="">
             <img src="./src/assets/bka.png" class="w-[20vw] lg:w-[5vw] animate-pulse" alt="">
           </div>
           <p class="font-sancreek text-[#ff66c4] text-[5vw] lg:text-[1.4vw] text-center lg:mt-[1vw] mt-[7vw]">Saturday, December 21 2024</p>
@@ -38,7 +38,7 @@
     <div class="w-full relative z-10 flex flex-col">
       <img src="./src/assets/balon.png" alt="" class="w-full">
       <div class="w-full  relative text-center mt-[-30vw] lg:mt-[-14vw]">
-        <img src="./src/assets/oval.png" class="w-[40vw] lg:w-[15vw] mx-auto text-center mb-[-7.5vh] lg:mb-[-6vw]" alt="">
+        <img src="./src/assets/oval.png" class="w-[40vw] lg:w-[15vw] mx-auto text-center mb-[-8vh] lg:mb-[-6vw]" alt="">
         <p class="font-vibes text-[8vw] text-[#ff66c4] lg:text-[3vw] font-bold mx-auto">Rameesha</p>
       </div>
       <p class="font-vibes italic text-[7vw] font-bold text-[#ff66c4] text-center mt-[5vw]">is turning</p>
@@ -50,14 +50,12 @@
       <!-- Carousel -->
       <div id="carousel" class="relative overflow-hidden rounded-lg">
         <div class="carousel-images flex transition-transform duration-500 ease-in-out">
-          <img class="w-screen  object-cover" src="./src/assets/1.jpeg" alt="Image 1">
-          <img class="w-screen  object-cover" src="./src/assets/2.jpeg" alt="Image 2">
-          <img class="w-screen  object-cover" src="./src/assets/3.jpeg" alt="Image 3">
-          <img class="w-screen  object-cover" src="./src/assets/4.jpeg" alt="Image 3">
-
-          <img class="w-screen  object-cover" src="./src/assets/5.jpeg" alt="Image 3">
-
-          <img class="w-screen  object-cover" src="./src/assets/6.jpeg" alt="Image 3">
+          <img class="w-screen object-cover" src="./src/assets/1.jpeg" alt="Image 1">
+          <img class="w-screen object-cover" src="./src/assets/2.jpeg" alt="Image 2">
+          <img class="w-screen object-cover" src="./src/assets/3.jpeg" alt="Image 3">
+          <img class="w-screen object-cover" src="./src/assets/4.jpeg" alt="Image 3">
+          <img class="w-screen object-cover" src="./src/assets/5.jpeg" alt="Image 3">
+          <img class="w-screen object-cover" src="./src/assets/6.jpeg" alt="Image 3">
 
         </div>
 
@@ -69,7 +67,7 @@
           &#10095;
         </button>
       </div>
-      <div class="grid grid-cols-2 gap-y-[4vh] px-[7vh] mt-[4vh]">
+      <div class="grid grid-cols-2 gap-y-[4vh] px-[7vh] mt-[4vh] bg-wkt bg-contain bg-no-repeat">
         <div class="text-center">
           <p class="bg-[#f8bfbf] text-center mx-auto px-[6vh] py-[1vh] rounded-full text-[6vw] font-sancreek text-white w-fit">7</p>
           <p class="font-sancreek text-[5vw] text-[#ff66c4] mt-[1vh]">Days</p>
@@ -87,19 +85,22 @@
           <p class="font-sancreek text-[5vw] text-[#ff66c4] mt-[1vh]">Seconds</p>
         </div>
       </div>
-      <img src="./src/assets/main.png" alt="" class="w-full mt-[9vw]">
+      <div class="bg-clr w-full py-[3vw] mt-[5vh]">
+        <img src="./src/assets/carousell.gif" alt="" class="w-[45vw] mx-auto mt-[9vw]">
+      </div>
       <p class="mt-[3vh] text-[6vw] text-center font-sancreek text-[#ff66c4]">Saturday</p>
-      <div class=" mt-[2vh] grid grid-cols-3 justify-between px-[5vh] items-center">
+      <div class=" mt-[2vh] grid grid-cols-3 justify-between px-[5vh] items-center ">
         <p class="text-[6vw] text-center font-sancreek text-[#ff66c4]">December</p>
         <p class="mt-[-1vh] text-[9vw] text-center font-bold text-[#f8bfbf]">21</p>
         <p class="text-[6vw] text-center font-sancreek text-[#ff66c4]">2024</p>
       </div>
-      <p class="mt-[2vh] text-[6vw] text-center font-sancreek text-[#ff66c4]">At 11.00 AM</p>
+      <div class="w-full h-full bg-time bg-no-repeat bg-contain">
+        <p class="mt-[2vh] text-[6vw] text-center font-sancreek text-[#ff66c4]">At 11.00 AM</p>
       <p class="mt-[2vh] text-[5vw] text-center font-sancreek text-[#ff66c4]">Dresscode : Pastel</p>
-
       <img src="./src/assets/pinpoint.png" class="w-[1.4vh] mx-auto mt-[2vh]" alt="">
       <p class="mt-[2vh] text-[6vw] text-center font-sancreek text-[#ff66c4]">Popeyes Kemang</p>
       <p class="text-[4vw] mt-[1vh] text-center font-sancreek text-[#ff66c4]">Jl. Kemang Raya No. 73 Jakarta Selatan</p>
+      </div>
       <button class="bg-[#f8bfbf] px-[6vw] lg:px-[2vw] py-[2vw] lg:py-[1vw] rounded-full mt-[5vw] lg:mt-[1vw] mx-auto">
         <p class="font-sancreek text-white text-[5vw] lg:text-[1.4vw]">See Location</p>
       </button>
@@ -187,7 +188,7 @@
       <p class="mt-[5vh] text-[4vw] text-center font-sancreek text-[#ff66c4]">Created by:</p>
       <p class="mt-[1vh] text-[4vw] text-center font-sancreek text-[#ff66c4]">Invite You Invitation</p>
 
-      <img src="./src/assets/bawah.png" alt="">
+      <img src="./src/assets/aa.gif" alt="">
       
     </div>
    
