--- a/index.html
+++ b/index.html
@@ -48,14 +48,14 @@
         <img src="./src/assets/2ba.png" class="w-[8vh] lg:w-[5vw] animate-pulse " alt="">
       </div>
       <!-- Carousel -->
-      <div id="carousel" class="relative overflow-hidden rounded-lg">
+      <div id="carousel" class="relative overflow-hidden">
         <div class="carousel-images flex transition-transform duration-500 ease-in-out">
-          <img class="w-screen object-cover" src="./src/assets/1.jpeg" alt="Image 1">
-          <img class="w-screen object-cover" src="./src/assets/2.jpeg" alt="Image 2">
-          <img class="w-screen object-cover" src="./src/assets/3.jpeg" alt="Image 3">
-          <img class="w-screen object-cover" src="./src/assets/4.jpeg" alt="Image 3">
-          <img class="w-screen object-cover" src="./src/assets/5.jpeg" alt="Image 3">
-          <img class="w-screen object-cover" src="./src/assets/6.jpeg" alt="Image 3">
+          <img class="w-[50vw] h-[35vh] object-cover" src="./src/assets/4.jpeg" alt="Image 1">
+          <img class="w-[50vw] h-[35vh] object-cover" src="./src/assets/2.jpeg" alt="Image 2">
+          <img class="w-[50vw] h-[35vh] object-cover" src="./src/assets/3.jpeg" alt="Image 3">
+          <img class="w-[50vw] h-[35vh] object-cover" src="./src/assets/1.jpeg" alt="Image 3">
+          <img class="w-[50vw] h-[35vh] object-cover" src="./src/assets/5.jpeg" alt="Image 3">
+          <img class="w-[50vw] h-[35vh] object-cover" src="./src/assets/6.jpeg" alt="Image 3">
 
         </div>
 
@@ -105,6 +105,11 @@
         <p class="font-sancreek text-white text-[5vw] lg:text-[1.4vw]">See Location</p>
       </button>
       <img src="./src/assets/tent.png" class="mt-[5vw]" alt="">
+      <div class="grid grid-cols-3">
+          <img class="w-[50vw] h-[20vh] object-cover" src="./src/assets/2.jpeg" alt="Image 2">
+          <img class="w-[50vw] h-[20vh] object-cover" src="./src/assets/3.jpeg" alt="Image 3">
+          <img class="w-[50vw] h-[20vh] object-cover" src="./src/assets/1.jpeg" alt="Image 3">
+      </div>
       <div class="w-full py-[5vw] px-[4vw] bg-[#f8bfbf]">
         <p class=" text-[6vw]  font-sancreek text-white">Send Wishes</p>
         <form action="" class="mt-[3vw]">
