--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         <img src="./src/assets/balon.png" alt="" class="w-full">
         <div class="w-full mt-[-30vw] lg:mt-[-14vw]">
           <img src="./src/assets/welcome.png" class="w-[35vw] lg:w-[10vw] mx-auto" alt="">
-          <div class="w-fit  relative text-center bg-oval bg-cover px-[5vw] py-[4vw] mx-auto">
-            <!-- <img src="./src/assets/oval.png" class="w-[40vw] lg:w-[15vw] mx-auto text-center mb-[-7.5vh] lg:mb-[-6vw]" alt=""> -->
+          <div class="w-full  relative text-center ">
+            <img src="./src/assets/oval.png" class="w-[40vw] lg:w-[15vw] mx-auto text-center mb-[-8vh] lg:mb-[-6vw]" alt="">
             <p class="font-vibes text-[8vw] text-[#ff66c4] lg:text-[3vw] font-bold mx-auto">Rameesha</p>
           </div>
           <h1 class="font-sancreek text-[8vw] lg:text-[2.5vw] text-[#fd91be] mt-[10vw] lg:mt-[3vw] text-center">First Birthday Party</h1>
