--- a/index.html
+++ b/index.html
@@ -75,17 +75,14 @@
         <div class="px-[10vw]">
           <img class="w-[100vw] h-[35vh] object-center object-cover rounded-xl" src="./src/assets/4.jpeg" alt="Image 1">
         </div>
+        
       </div>
-
-      <p class="mt-[3vh] text-[6vw] text-center font-sancreek text-[#ff66c4]">Saturday</p>
-      <div class=" mt-[2vh] grid grid-cols-3 justify-between px-[5vh] items-center ">
-        <p class="text-[6vw] text-center font-sancreek text-[#ff66c4]">December</p>
-        <p class="mt-[-1vh] text-[9vw] text-center font-bold text-[#f8bfbf]">21</p>
-        <p class="text-[6vw] text-center font-sancreek text-[#ff66c4]">2024</p>
+      <div class=" mt-[2vh]  px-[5vh] items-center ">
+        <p class="text-[6vw] text-center font-sancreek text-[#ff66c4]">Saturday, 21 December 2024</p>
       </div>
       <div class="w-full h-full bg-time bg-no-repeat bg-contain">
         <p class="mt-[2vh] text-[6vw] text-center font-sancreek text-[#ff66c4]">At 11.00 AM</p>
-      <p class="mt-[2vh] text-[5vw] text-center font-sancreek text-[#ff66c4]">Dresscode : Pastel</p>
+      <p class="mt-[2vh] text-[5vw] text-center font-sancreek text-[#ff66c4]">Dresscode : Pastel Color</p>
       <img src="./src/assets/pinpoint.png" class="w-[1.4vh] mx-auto mt-[2vh]" alt="">
       <p class="mt-[2vh] text-[6vw] text-center font-sancreek text-[#ff66c4]">Popeyes Kemang</p>
       <p class="text-[4vw] mt-[1vh] text-center font-sancreek text-[#ff66c4]">Jl. Kemang Raya No. 73 Jakarta Selatan</p>
@@ -94,12 +91,18 @@
         <p class="font-sancreek text-white text-[5vw] lg:text-[1.4vw]">See Location</p>
       </button>
       <img src="./src/assets/tent.png" class="mt-[5vw]" alt="">
-      <div class="flex overflow-y-scroll">
+      <div class="flex overflow-y-scroll gap-[2vw]">
           <img class="w-[50vw] h-[20vh] object-cover" src="./src/assets/1.jpeg" alt="Image 3">
           <img class="w-[50vw] h-[20vh] object-cover" src="./src/assets/2.jpeg" alt="Image 3">
           <img class="w-[50vw] h-[20vh] object-cover" src="./src/assets/3.jpeg" alt="Image 3">
           <img class="w-[50vw] h-[20vh] object-cover" src="./src/assets/5.jpeg" alt="Image 3">
           <img class="w-[50vw] h-[20vh] object-cover" src="./src/assets/6.jpeg" alt="Image 3">
+          <img class="w-[50vw] h-[20vh] object-cover" src="./src/assets/7.jpeg" alt="Image 3">
+          <img class="w-[50vw] h-[20vh] object-cover" src="./src/assets/8.jpeg" alt="Image 3">
+          <img class="w-[50vw] h-[20vh] object-cover" src="./src/assets/9.jpeg" alt="Image 3">
+          <img class="w-[50vw] h-[20vh] object-cover" src="./src/assets/10.jpeg" alt="Image 3">
+          <img class="w-[50vw] h-[20vh] object-cover" src="./src/assets/11.jpeg" alt="Image 3">
+          <img class="w-[50vw] h-[20vh] object-cover" src="./src/assets/12.jpeg" alt="Image 3">
       </div>
       <div class="w-full py-[5vw] px-[4vw] bg-[#f8bfbf]">
         <p class=" text-[6vw]  font-sancreek text-white">Send Wishes</p>
@@ -182,9 +185,7 @@
 
       </div>
 
-      <p class="mt-[5vh] text-[5vw] text-center font-sancreek text-[#ff66c4]">Blessed Parents <br> Mima Tasskja & Papa Ditto</p>
-
-
+      <p class="mt-[3vh] text-[5vw] text-center font-sancreek text-[#ff66c4]">Blessed Parents <br> Mima Tasskja & Papa Ditto</p>
       <p class="mt-[5vh] text-[3vw] text-center font-sancreek text-[#ff66c4]">Created by:</p>
       <p class="mt-[1vh] text-[3vw] text-center font-sancreek text-[#ff66c4]">Invite You Invitation</p>
 
