--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <img src="./src/assets/carousell.gif" class="w-[44vw] lg:w-[15vw]" alt="">
             <img src="./src/assets/bka.png" class="w-[20vw] lg:w-[5vw] animate-pulse" alt="">
           </div>
-          <p class="font-sancreek text-[#ff66c4] text-[5vw] lg:text-[1.4vw] text-center lg:mt-[1vw] mt-[7vw]">Saturday, December 21 2024</p>
+          <p class="font-sancreek text-[#ff66c4] text-[5vw] lg:text-[1.4vw] text-center lg:mt-[1vw] mt-[7vw]">Saturday, 21 December 2024</p>
           <button class="bg-[#ff66c4] px-[6vw] lg:px-[2vw] py-[2vw] lg:py-[1vw] rounded-full mt-[7vw] lg:mt-[1vw] mx-auto">
             <p class="font-sancreek text-white text-[5vw] lg:text-[1.4vw]">Open Invitation</p>
           </button>
@@ -73,12 +73,15 @@
       </div>
       <div id="carousel" class="relative overflow-hidden mt-[10vw]">
         <div class="px-[10vw]">
-          <img class="w-[100vw] h-[35vh] object-center object-cover rounded-xl" src="./src/assets/4.jpeg" alt="Image 1">
+          <img class="w-[100vw] h-[40vh] object-center object-cover rounded-xl" src="./src/assets/4.jpeg" alt="Image 1">
         </div>
-        
+        <p class="mt-[3vh] text-[5vw] text-center font-sancreek text-[#ff66c4]">Blessed Parents <br> Mima Tasskja & Papa Ditto</p>
       </div>
-      <div class=" mt-[2vh]  px-[5vh] items-center ">
-        <p class="text-[6vw] text-center font-sancreek text-[#ff66c4]">Saturday, 21 December 2024</p>
+      <p class="mt-[3vh] text-[6vw] text-center font-sancreek text-[#ff66c4]">Saturday</p>
+      <div class=" mt-[2vh] grid grid-cols-3 justify-between px-[5vh] items-center ">
+        <p class="text-[6vw] text-center font-sancreek text-[#ff66c4]">December</p>
+        <p class="mt-[-1vh] text-[9vw] text-center font-bold text-[#f8bfbf]">21</p>
+        <p class="text-[6vw] text-center font-sancreek text-[#ff66c4]">2024</p>
       </div>
       <div class="w-full h-full bg-time bg-no-repeat bg-contain">
         <p class="mt-[2vh] text-[6vw] text-center font-sancreek text-[#ff66c4]">At 11.00 AM</p>
@@ -91,7 +94,7 @@
         <p class="font-sancreek text-white text-[5vw] lg:text-[1.4vw]">See Location</p>
       </button>
       <img src="./src/assets/tent.png" class="mt-[5vw]" alt="">
-      <div class="flex overflow-y-scroll gap-[2vw]">
+      <div class="flex overflow-y-scroll">
           <img class="w-[50vw] h-[20vh] object-cover" src="./src/assets/1.jpeg" alt="Image 3">
           <img class="w-[50vw] h-[20vh] object-cover" src="./src/assets/2.jpeg" alt="Image 3">
           <img class="w-[50vw] h-[20vh] object-cover" src="./src/assets/3.jpeg" alt="Image 3">
@@ -185,7 +188,9 @@
 
       </div>
 
-      <p class="mt-[3vh] text-[5vw] text-center font-sancreek text-[#ff66c4]">Blessed Parents <br> Mima Tasskja & Papa Ditto</p>
+      
+
+
       <p class="mt-[5vh] text-[3vw] text-center font-sancreek text-[#ff66c4]">Created by:</p>
       <p class="mt-[1vh] text-[3vw] text-center font-sancreek text-[#ff66c4]">Invite You Invitation</p>
 
