--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <div class="px-[10vw]">
           <img class="w-[100vw] h-[40vh] object-center object-cover rounded-xl" src="./src/assets/4.jpeg" alt="Image 1">
         </div>
-        <p class="mt-[3vh] text-[5vw] text-center font-sancreek text-[#ff66c4]">Blessed Parents <br> Mima Tasskja & Papa Ditto</p>
+        <p class="mt-[3vh] text-[5vw] text-center font-sancreek text-[#ff66c4]">Come and Join Us to <br> Rameesha Birthday Party</p>
       </div>
       <p class="mt-[3vh] text-[6vw] text-center font-sancreek text-[#ff66c4]">Saturday</p>
       <div class=" mt-[2vh] grid grid-cols-3 justify-between px-[5vh] items-center ">
@@ -94,6 +94,7 @@
         <p class="font-sancreek text-white text-[5vw] lg:text-[1.4vw]">See Location</p>
       </button>
       <img src="./src/assets/tent.png" class="mt-[5vw]" alt="">
+      <p class="my-[3vh] text-[5vw] text-center font-sancreek text-[#ff66c4]">Blessed Parents <br> Mima Tasskja & Papa Ditto</p>
       <div class="flex overflow-y-scroll">
           <img class="w-[50vw] h-[20vh] object-cover" src="./src/assets/1.jpeg" alt="Image 3">
           <img class="w-[50vw] h-[20vh] object-cover" src="./src/assets/2.jpeg" alt="Image 3">
