--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         <p class="text-[6vw] text-center font-sancreek text-[#ff66c4]">2024</p>
       </div>
       <div class="w-full h-full bg-time bg-no-repeat bg-contain">
-        <p class="mt-[2vh] text-[6vw] text-center font-sancreek text-[#ff66c4]">At 11.00 AM</p>
+        <p class="mt-[2vh] text-[6vw] text-center font-sancreek text-[#ff66c4]">At 11.00 WIB</p>
       <p class="mt-[2vh] text-[5vw] text-center font-sancreek text-[#ff66c4]">Dresscode : Pastel Color</p>
       <img src="./src/assets/pinpoint.png" class="w-[1.4vh] mx-auto mt-[2vh]" alt="">
       <p class="mt-[2vh] text-[6vw] text-center font-sancreek text-[#ff66c4]">Popeyes Kemang</p>
@@ -94,7 +94,7 @@
         <p class="font-sancreek text-white text-[5vw] lg:text-[1.4vw]">See Location</p>
       </button>
       <img src="./src/assets/tent.png" class="mt-[5vw]" alt="">
-      <p class="my-[3vh] text-[5vw] text-center font-sancreek text-[#ff66c4]">Blessed Parents <br> Mima Tasskja & Papa Ditto</p>
+      <p class="my-[3vh] text-[5vw] text-center font-sancreek text-[#ff66c4]">Blessed Parents, <br> Mima Tasskja & Papa Ditto</p>
       <div class="flex overflow-y-scroll">
           <img class="w-[50vw] h-[20vh] object-cover" src="./src/assets/1.jpeg" alt="Image 3">
           <img class="w-[50vw] h-[20vh] object-cover" src="./src/assets/2.jpeg" alt="Image 3">
